syntax="proto3";

option go_package="pkg/api/user-service";

package user_service;

service User{
    rpc Get(Request) returns (Reply);
    rpc Register(RegisterRequest) returns (RegisterResponse);
    rpc Login(LoginRequest) returns (LoginResponse);

}


//register messages
message RegisterRequest{
    string username = 1;
    string email = 2;
    string password = 3;
    string passwordConfirm = 4;
}

message RegisterResponse{
    string uuid = 1; //use it for notifying user of successful creating account (EXAMPLE: message = "account registered successfully!")
    bool isAdmin = 2;
}

//login messages
message LoginRequest{
    string email = 1;
    string password = 2;
}

message LoginResponse{
    string uuid = 1; //use like in RegisterResponse
}

//other messages
message Request{
    string message = 1;
}

message Reply{
    string message = 1;
}
